# voxel-engine

./: .gitignore  CMakeLists.txt  build.sh  run.sh
engine/: main.c
engine/graphics/: CMakeLists.txt  camera.c  camera.h  chunk.c  chunk.h  error.c  error.h  graphics.c  graphics.h  light.h  shader.c  shader.h  shader_program.c  shader_program.h  texture.c  texture.h  voxel.c  voxel.h  world.c  world.h
engine/graphics/glad/: glad.c
engine/graphics/include/graphics/: camera.h  enums.h  graphics.h  voxel.h  world.h
engine/graphics/src/: buffer.c  buffer.h  camera.c  enums.c  enums.h  error.c  error.h  graphics.c  material.c  material.h  mesh.c  mesh.h  model.c  model.h  sampler.c  sampler.h  shader.c  shader.h  shader_program.c  shader_program.h  texture.c  texture.h  vertex.c  vertex.h  vertex_array.c  vertex_array.h  voxel.c  world.c
engine/graphics/src/glad/: glad.h
engine/host/: CMakeLists.txt  gamepad.h  host.c  host.h  joystick.h  key.h  mouse.h  window.c  window.h
engine/log/: CMakeLists.txt  log.c  log.h
engine/log/include/log/: log.h
engine/log/src/: log.c
engine/platform/: CMakeLists.txt
engine/platform/include/platform/: key.h  mouse.h  platform.h  window.h
engine/platform/src/: key.c  mouse.c  platform.c  window.c
engine/utils/: CMakeLists.txt
engine/utils/include/utils/: macros.h
glsl/: fragment.glsl  vertex.glsl
shaders/: terrain.vert  terrain_fragment.glsl
